@@ -1,5 +1,10 @@
 2006-12-25  OHASHI Akira  <bg66@koka-in.org>
 
+	* mixi.el (mixi-save-cache): Change the location of cache files.
+	(mixi-load-cache): Ditto.
+
+2006-12-25  OHASHI Akira  <bg66@koka-in.org>
+
 	* sb-mixi.el (shimbun-get-headers): Use `mixi-bbs-p'.
 	(shimbun-mixi-get-comment-p): Abolish.
 	(shimbun-mixi-get-headers): Follow the change above.
